Добавлены транзакции к операциям, которые этого требуют
